# agent-job-research

./: .context-sync-claims.json  .gitignore  README.md  form-answers.md  github-updates.md  linkedin-updates.md  negotiation-playbook.md  package-lock.json  package.json  portals.yml  project-story.md  pyproject.toml  research-agent-plan.md  resume-diego-gomez-ops-ai.md  setup_wizard.py  skills-inventory.md  vocaroo-script.md  x-profile-updates.md
.claude/: CLAUDE.md  settings.json
.claude/agents/: applier-2.md  composer-4.md  discoverer-6.md  filler-10.md  lead-0.md  letter-5.md  pdf-9.md  primer-8.md  ranker-7.md  recon-3.md  scout-1.md  scripter-11.md
.github/workflows/: test.yml
board_aggregator/: cli.py  models.py  output.py  portal_scanner.py  runner.py
board_aggregator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
board_aggregator/scrapers/: __init__.py  base.py  crypto_jobs.py  cryptocurrencyjobs.py  cryptojobslist.py  himalayas.py  hn_hiring.py  jobspy_boards.py  reddit_jobs.py  remoteok.py  web3career.py  weworkremotely.py
dashboard/: go.mod  main.go
docs/: CODEBASE_MAP.md  exa-upgrade-plan.md
hireboost_scraper/: cli.py  output.py  runner.py
hireboost_scraper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
research/: board-scraping-feasibility.md  crypto-job-board-research.md  deep-research-ai-job-boards-2026.md  deep-research-crypto-job-boards-2026.md  git-status-report.md  job-board-research.md  pipeline-summary.md
scripts/: generate-pdf.mjs  normalize-ats.mjs  tracker.py
templates/: .env.example  cover-letter-template.html  cv-template.html  portals.example.yml  resume.example.md  skills-inventory.example.md  states.yml  voice-sample-template.md
tests/: conftest.py  test_crypto_jobs.py  test_cryptocurrencyjobs.py  test_cryptojobslist.py  test_himalayas.py  test_hn_hiring.py  test_jobspy_boards.py  test_models.py  test_output.py  test_portal_scanner.py  test_reddit_jobs.py  test_runner.py  test_tracker.py  test_web3career.py  test_weworkremotely.py  test_wizard.py
(+137 files in other folders)
