[project]
name = "board-aggregator"
version = "0.1.0"
description = "Multi-board job scraper CLI for the HireBoost pipeline"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "requests>=2.31",
    "feedparser>=6.0",
    "beautifulsoup4>=4.12",
    "pydantic>=2.0",
    "python-jobspy>=1.1",
]

[project.optional-dependencies]
browser = ["playwright>=1.40"]
dev = ["pytest>=8.0", "pytest-mock>=3.12", "responses>=0.25"]

[project.scripts]
board-aggregator = "board_aggregator.cli:main"

[tool.setuptools.packages.find]
include = ["board_aggregator*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
